--- a/main.css
+++ b/main.css
@@ -3,43 +3,41 @@
     margin: 0;
 }
 
-.container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-}
-
 .box {
-    display: inline-block;
-    position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 10vw;
+    height: 22vh;
     background-color: gold;
-    animation: move 4s linear infinite 0s;
+    transform: translate(0, 0);
+    animation: move 8s infinite linear 0s;
 }
 
 @keyframes move {
 
-    25% {
-        position: absolute;
-        right: 0;
+    0% {
+        background-color: gold;
+        transform: translate(0, 0);
     }
 
+    25% {
+        background-color: rgb(0, 17, 255);
+        transform: translate(90vw, 0);
+        border-radius: 50%;
+        }
+
     50% {
-        position: absolute;
-        right: 0;
-        bottom: 0;
+        background-color: rgb(0, 255, 0);
+        transform: translate(90vw, 78vh);
+        border-radius: 0;
     }
 
     75% {
-        position: absolute;
-        left: 0;
-        bottom: 0;    
+        background-color: rgb(255, 0, 21);
+        transform: translate(0vw, 78vh);
+        border-radius: 50%;
     }
 
     100% {
-        position: absolute;
-        left: 0;
-        top: 0;
+        background-color: rgb(0, 255, 0);
+        transform: translate(0vw, 0vh);
     }
 }
